// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Columns should render as default 1`] = `
.emotion-0 {
  display: block;
  grid-template-columns: repeat(3,1fr);
}

@media (min-width:480px) {
  .emotion-0 {
    display: grid;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <div
    class="columns emotion-0"
  >
    <div>
      example 1
    </div>
    <div>
      example 2
    </div>
    <div>
      example 3
    </div>
  </div>
</div>
`;

exports[`Grid should render as default 1`] = `
.emotion-0 {
  grid-gap: 16px;
  display: block;
  grid-template-areas: 'one two three four five six seven eight nine ten eleven twelve';
}

@media (min-width:480px) {
  .emotion-0 {
    display: grid;
  }
}

@media (min-width:1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <div
    class="grid emotion-0"
  >
    example
  </div>
</div>
`;
